@@ -41,9 +41,14 @@ import org.apache.hadoop.io.Writable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import junit.framework.TestCase;
 
-public class TestJsonSerDe extends TestCase {
+import static org.junit.Assert.assertTrue;
+import org.junit.Test;
+
+/**
+ * TestJsonSerDe.
+ */
+public class TestJsonSerDe {
 
   private static final Logger LOG = LoggerFactory.getLogger(TestJsonSerDe.class);
 
@@ -51,18 +56,18 @@ public class TestJsonSerDe extends TestCase {
     List<Pair<Properties, HCatRecord>> data = new ArrayList<Pair<Properties, HCatRecord>>();
 
     List<Object> rlist = new ArrayList<Object>(13);
-    rlist.add(new Byte("123"));
-    rlist.add(new Short("456"));
-    rlist.add(new Integer(789));
-    rlist.add(new Long(1000L));
-    rlist.add(new Double(5.3D));
-    rlist.add(new Float(2.39F));
-    rlist.add(new String("hcat\nand\nhadoop"));
+    rlist.add(Byte.valueOf("123"));
+    rlist.add(Short.valueOf("456"));
+    rlist.add(Integer.valueOf(789));
+    rlist.add(Long.valueOf(1000L));
+    rlist.add(Double.valueOf(5.3D));
+    rlist.add(Float.valueOf(2.39F));
+    rlist.add("hcat\nand\nhadoop");
     rlist.add(null);
 
     List<Object> innerStruct = new ArrayList<Object>(2);
-    innerStruct.add(new String("abc"));
-    innerStruct.add(new String("def"));
+    innerStruct.add("abc");
+    innerStruct.add("def");
     rlist.add(innerStruct);
 
     List<Integer> innerList = new ArrayList<Integer>();
@@ -71,24 +76,24 @@ public class TestJsonSerDe extends TestCase {
     rlist.add(innerList);
 
     Map<Short, String> map = new HashMap<Short, String>(3);
-    map.put(new Short("2"), "hcat is cool");
-    map.put(new Short("3"), "is it?");
-    map.put(new Short("4"), "or is it not?");
+    map.put(Short.valueOf("2"), "hcat is cool");
+    map.put(Short.valueOf("3"), "is it?");
+    map.put(Short.valueOf("4"), "or is it not?");
     rlist.add(map);
 
-    rlist.add(new Boolean(true));
+    rlist.add(Boolean.TRUE);
 
     List<Object> c1 = new ArrayList<Object>();
     List<Object> c1_1 = new ArrayList<Object>();
-    c1_1.add(new Integer(12));
+    c1_1.add(Integer.valueOf(12));
     List<Object> i2 = new ArrayList<Object>();
     List<Integer> ii1 = new ArrayList<Integer>();
-    ii1.add(new Integer(13));
-    ii1.add(new Integer(14));
+    ii1.add(Integer.valueOf(13));
+    ii1.add(Integer.valueOf(14));
     i2.add(ii1);
     Map<String, List<?>> ii2 = new HashMap<String, List<?>>();
     List<Integer> iii1 = new ArrayList<Integer>();
-    iii1.add(new Integer(15));
+    iii1.add(Integer.valueOf(15));
     ii2.put("phew", iii1);
     i2.add(ii2);
     c1_1.add(i2);
@@ -139,6 +144,7 @@ public class TestJsonSerDe extends TestCase {
     return data;
   }
 
+  @Test
   public void testRW() throws Exception {
 
     Configuration conf = new Configuration();
@@ -174,6 +180,7 @@ public class TestJsonSerDe extends TestCase {
 
   }
 
+  @Test
   public void testRobustRead() throws Exception {
     /**
      *  This test has been added to account for HCATALOG-436
@@ -264,6 +271,7 @@ public class TestJsonSerDe extends TestCase {
    * Then it should still work, and ignore the "x" and "t" field and "c" subfield of "s", and it
    * should read k as null.
    */
+  @Test
   public void testLooseJsonReadability() throws Exception {
     Configuration conf = new Configuration();
     Properties props = new Properties();
@@ -291,6 +299,7 @@ public class TestJsonSerDe extends TestCase {
 
   }
 
+  @Test
   public void testUpperCaseKey() throws Exception {
     Configuration conf = new Configuration();
     Properties props = new Properties();
@@ -320,6 +329,7 @@ public class TestJsonSerDe extends TestCase {
     return retval;
   }
 
+  @Test
   public void testMapValues() throws Exception {
     Configuration conf = new Configuration();
     Properties props = new Properties();
